// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate changeset file > should generate changeset file, but skip commit and push > changeset without commit and push 1`] = `
[MockFunction] {
  "calls": [
    [
      ".changeset/renovate-test.md",
      "---
'packageName': patch
---

Updated dependency \`package\` to \`version\`.
Updated dependency \`package2\` to \`version2\`.
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`generate changeset file > should generate changeset file, commit and push > changeset with commit and push 1`] = `
[MockFunction] {
  "calls": [
    [
      ".changeset/renovate-test.md",
      "---
'packageName': patch
---

Updated dependency \`packagez\` to \`version2\`.
Updated dependency \`packagea\` to \`version\`.
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`generate changeset file > should generate sorted changeset file, but skip commit and push > sorted changeset without commit and push 1`] = `
[MockFunction] {
  "calls": [
    [
      ".changeset/renovate-test.md",
      "---
'packageNameA': patch
'packageNameB': patch
---

Updated dependency \`packagea\` to \`version\`.
Updated dependency \`packagez\` to \`version2\`.
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`generate changeset file > should not skip if branch starts with custom branch prefix > custom branch prefix changeset 1`] = `
[MockFunction] {
  "calls": [
    [
      ".changeset/renovate-test.md",
      "---
'packageName': patch
---

Updated dependency \`package\` to \`version\`.
Updated dependency \`package2\` to \`version2\`.
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`generate changeset file > should not skip if not in renovate branch, when branch check skip is true > branch check skip changeset 1`] = `
[MockFunction] {
  "calls": [
    [
      ".changeset/renovate-test.md",
      "---
'packageName': patch
---

Updated dependency \`package\` to \`version\`.
Updated dependency \`package2\` to \`version2\`.
",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
